# man_coding_quality

./: 6. Глава 6. Экспериментальная проверка достоверности априорной оценки качества.docx  README_FIGURE_FIX_AFTER_STAGE27.md  README_FIGURE_FIX_AFTER_STAGE30.md  README_FIGURE_FIX_AFTER_STAGE34.md  README_FIGURE_STAGE_01.md  README_FIGURE_STAGE_02.md  README_FIGURE_STAGE_03.md  README_FIGURE_STAGE_04.md  README_FIGURE_STAGE_05.md  README_FIGURE_STAGE_06.md  README_FIGURE_STAGE_07.md  README_FIGURE_STAGE_08.md  README_FIGURE_STAGE_09.md  README_FIGURE_STAGE_10.md  README_FIGURE_STAGE_11.md  README_FIGURE_STAGE_12.md  README_FIGURE_STAGE_13.md  README_FIGURE_STAGE_14.md  README_FIGURE_STAGE_15.md  README_FIGURE_STAGE_16.md  README_FIGURE_STAGE_16_FIX.md  README_FIGURE_STAGE_16_FIX2.md  README_FIGURE_STAGE_17.md  README_FIGURE_STAGE_18.md  README_FIGURE_STAGE_19.md  README_FIGURE_STAGE_20.md  README_FIGURE_STAGE_21.md  README_FIGURE_STAGE_22.md  README_FIGURE_STAGE_23.md  README_FIGURE_STAGE_24.md  README_FIGURE_STAGE_25.md  README_FIGURE_STAGE_26.md  README_FIGURE_STAGE_27.md  README_FIGURE_STAGE_28.md  README_FIGURE_STAGE_29.md  README_FIGURE_STAGE_30.md  README_FIGURE_STAGE_31.md  README_FIGURE_STAGE_32.md  README_FIGURE_STAGE_33.md  README_FIGURE_STAGE_34.md  (+61 more)
configs/: base_experiment.yaml  chapter5.yaml  (+3 more)
extensions/decoding_simulation/: README_STAGE0.md  README_STAGE1.md  README_STAGE2.md  README_STAGE3.md  README_STAGE4.md  pyproject.toml
extensions/decoding_simulation/configs/: decoding_stage1.yaml  decoding_stage2.yaml  decoding_stage3.yaml  decoding_stage4.yaml
(+531 files in other folders)
