[project]
name = "manual-coding-quality"
version = "0.1.0"
description = "Research simulator for prior quality assessment of manual coding procedures"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
